--- a/PortfolioWebsite/index.html
+++ b/PortfolioWebsite/index.html
@@ -7,7 +7,11 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+
+    <canvas id="bg"></canvas>
+    <main>
+      <h1>Busher Bridi</h1>
+    </main>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
